# LP1-Jogo-Keno

./: CMakeLists.txt  INSTRUCTIONS-lp1.md  README.md
include/: classeKenoBet.h  funcoes.h  tabela.h
src/: classeKenoBet.cpp  funcoes.cpp  main.cpp  tabela.cpp
